# jax-research-template

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.githooks/: pre-commit
.github/hooks/: hooks.json
.github/skills/: README.md
.github/skills/bootstrap-shell/: SKILL.md
.github/skills/contribute-to-upstream/: SKILL.md
.github/skills/create-project/: SKILL.md
.github/skills/decide-change-location/: SKILL.md
.github/skills/diagnose-workspace/: SKILL.md
.github/skills/repair-workspace/: SKILL.md
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/research_cli/: config.py  doctor.py  lifecycle.py  main.py  project.py  workspace.py
cli/src/research_cli/templates/: gitignore.tpl  pyproject.toml.tpl  research.yaml.tpl
dev/bench/: data.js
docs/: backlog.md  principles.md  science_guide.md  standards.md
docs/adrs/: 001-monorepo-structure.md  002-conventional-commits-and-versioning.md  003-hybrid-artifact-and-data-storage.md  004-jax-programming-patterns.md  005-workspace-dependency-alignment.md  006-harvesting-lifecycle.md  007-declarative-experiment-management.md  008-relational-experiment-schema.md  009-analysis-stack.md
docs/specs/: agent-workflow-skills.md  canonical-env-protocol.md  research-cli.md
docs/wiki/: README.md  statistical-comparisons.md
examples/: dump_hlo.py  parallel_seeds.py  profile_agent.py  run_experiment.py  sweep_vmap.py  train_dqn.py  train_dqn_atari.py  train_ppo.py  train_sac.py
libs/experiment-definition/: pyproject.toml
libs/experiment-definition/docs/: spec.md
libs/experiment-definition/src/experiment_definition/: __init__.py  ablation.py  bridge.py  component.py  db.py  experiment.py  metric.py  parameter.py  schema.py
libs/jax-eval/: pyproject.toml
libs/jax-eval/docs/: spec.md
libs/jax-nn/: pyproject.toml
libs/jax-nn/docs/: spec.md
libs/jax-nn/src/jax_nn/: __init__.py  distributional.py  heads.py  initializers.py  layers.py
libs/jax-replay/: pyproject.toml
libs/jax-replay/src/jax_replay/: __init__.py  nstep.py  per.py  sum_tree.py  types.py  uniform.py
libs/jax-utils/: pyproject.toml
libs/jax-utils/docs/: spec.md
libs/jax-utils/src/jax_utils/: __init__.py  pytree.py  wrappers.py
libs/research-analysis/: pyproject.toml
libs/research-analysis/docs/: spec.md
libs/research-analysis/src/research_analysis/: __init__.py  _kernels.py  bootstrap.py  hypothesis.py  learning_curve.py  loader.py
libs/research-cluster/: pyproject.toml
libs/research-instrument/: pyproject.toml
libs/research-instrument/docs/: spec.md
libs/research-instrument/src/research_instrument/: __init__.py  collector.py  sqlite_backend.py
libs/research-plot/: pyproject.toml
libs/research-store/: pyproject.toml
libs/research-store/docs/: spec.md
libs/research-store/src/research_store/: __init__.py  local_backend.py  store.py  types.py  uri.py
libs/rl-agents/: pyproject.toml
libs/rl-agents/src/rl_agents/: __init__.py  double_dqn.py  dqn.py  dqn_atari.py  dueling_dqn.py  ppo.py  rainbow.py  sac.py
libs/rl-components/: pyproject.toml
libs/rl-components/src/rl_components/: __init__.py  action_normalization.py  atari.py  brax.py  buffers.py  env_protocol.py  gymnax_bridge.py  networks.py  structs.py  types.py
scripts/: copilot_hooks.py  dump_hlo.py  install-git-hooks.sh  install_jaxatari_assets.py  parallel_seeds.py  profile_agent.py  sweep_vmap.py  train_dqn.py  train_ppo.py  train_sac.py
src/agents/: dqn.py  ppo.py  sac.py
src/components/: buffers.py  networks.py  types.py
src/jax_research_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: copier.yml
templates/{{project_name}}/: README.md.jinja  pyproject.toml.jinja  train.py.jinja
tests/medium/: test_bootstrap_truthful_path.py  test_cli_doctor.py  test_cli_eject.py  test_cli_harvest.py  test_cli_workspace_repair.py  test_collector_scan.py  test_dqn_variants.py  test_experiment_db.py  test_experiment_definition_integration.py  test_jax_nn_c51_jit.py  test_jax_nn_epsilon_greedy_jit.py  test_jax_nn_nature_cnn_jit.py  test_jax_nn_noisy_linear_jit.py  test_jax_utils_jit.py  test_nstep_with_buffer.py  test_per_jit.py  test_project_create_render.py  test_project_create_truthful_path.py  test_research_analysis_loader.py  test_research_store_local.py  test_rl_agents_dqn_gradient.py  test_rl_agents_dqn_nature_env_integration.py  test_rl_agents_ppo_gradient.py  test_rl_agents_rainbow_nature_env_integration.py  test_rl_agents_sac_gradient.py  test_rl_components_atari_jit.py  test_rl_components_buffer_jit.py  test_rl_components_gymnax_bridge_jit.py  test_rl_components_networks.py  test_uniform_jit.py
tests/performance/: test_all_bench.py  test_ppo_bench.py  test_rl_agents_dqn_atari_env_loop_bench.py  test_rl_components_gymnax_bridge_bench.py
tests/regression/: test_dqn_learning.py  test_ppo_learning.py  test_rl_agents_dqn_atari_real_smoke.py  test_rl_components_atari_real_smoke.py  test_sac_learning.py
tests/small/: test_cli_config.py  test_collector_whitelist.py  test_doctor.py  test_experiment_bridge.py  test_experiment_definition_unit.py  test_experiment_schema.py  test_instrument_sqlite.py  test_jax_nn_c51.py  test_jax_nn_dueling_head.py  test_jax_nn_epsilon_greedy.py  test_jax_nn_initializers.py  test_jax_nn_nature_cnn.py  test_jax_nn_noisy_linear.py  test_jax_nn_public_api.py  test_jax_replay_uniform.py  test_jax_utils_pytree.py  test_lifecycle.py  test_nstep.py  test_per_buffer.py  test_project_create.py  test_research_analysis_bootstrap.py  test_research_analysis_hypothesis.py  test_research_analysis_learning_curve.py  test_research_store_uri.py  test_rl_agents_dqn.py  test_rl_agents_dqn_atari.py  test_rl_agents_ppo.py  test_rl_agents_rainbow.py  test_rl_agents_sac.py  test_rl_components_action_normalization.py  test_rl_components_atari.py  test_rl_components_buffer.py  test_rl_components_env_protocol.py  test_rl_components_gymnax_bridge.py  test_rl_components_types.py  test_sum_tree.py  test_workspace_init.py  test_workspace_repair.py
(+8 files in other folders)
