[project]
name = "research-core"
version = "0.1.0"
description = "The shared core for the RL research monorepo."
readme = "README.md"
authors = [
    { name = "Andy Patterson", email = "andnpatterson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chex~=0.1",
    "distrax~=0.1",
    "flax~=0.12",
    "gymnax~=0.0",
    "jax~=0.9",
    "jaxlib~=0.9",
    "jaxtyping~=0.3",
    "ml-collections~=1.1",
    "optax~=0.2",
    "pydantic~=2.12",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "cli"]

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-benchmark~=5.2",
    "ruff~=0.15",
    "ty~=0.0",
    "copier~=9.4",
    "typer~=0.12",
]

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# Configuration for ty type-checker
