[project]
name = "research-core"
version = "0.1.0"
description = "The shared core for the RL research monorepo."
readme = "README.md"
authors = [
    { name = "Andy Patterson", email = "andnpatterson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chex~=0.1",
    "distrax~=0.1",
    "flax~=0.12",
    "gymnax~=0.0",
    "jax~=0.9",
    "jaxatari @ git+https://github.com/k4ntz/JAXAtari@v0.1",
    "jaxlib~=0.9",
    "jaxtyping~=0.3",
    "matplotlib>=3.9",
    "ml-collections~=1.1",
    "numpy>=2.0",
    "optax~=0.2",
    "pandas>=2.0",
    "pydantic~=2.12",
    "scipy>=1.14",
    "experiment-definition",
    "jax-nn",
    "jax-replay",
    "jax-utils",
    "research-analysis",
    "research-cli",
    "research-instrument",
    "research-store",
    "rl-agents",
    "rl-components",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.uv.sources]
experiment-definition = { workspace = true }
jax-nn = { workspace = true }
jax-replay = { workspace = true }
jax-utils = { workspace = true }
research-analysis = { workspace = true }
research-cli = { workspace = true }
research-instrument = { workspace = true }
research-store = { workspace = true }
rl-agents = { workspace = true }
rl-components = { workspace = true }

[tool.uv.workspace]
members = ["libs/*", "cli"]

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-benchmark~=5.2",
    "ruff~=0.15",
    "ty~=0.0",
    "copier~=9.4",
    "typer~=0.12",
    "pyright>=1.1.408",
]

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
extra-paths = [
    "libs/jax-nn/src",
    "libs/jax-replay/src",
    "libs/jax-utils/src",
    "libs/research-analysis/src",
    "libs/research-cluster/src",
    "libs/research-instrument/src",
    "libs/research-plot/src",
    "libs/research-store/src",
    "libs/rl-agents/src",
    "libs/rl-components/src",
]
