[project]
name = "experiment-definition"
version = "0.1.0"
description = "Fluent builder API for defining JAX research experiments."
requires-python = ">=3.13"
dependencies = [
    "pydantic~=2.12",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
