[project]
name = "jax-nn"
version = "0.1.0"
description = "Stable RL layers and initializers for Flax Linen"
requires-python = ">=3.13"
dependencies = [
    "chex~=0.1",
    "jax~=0.9",
    "flax~=0.12",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
