[project]
name = "jax-replay"
version = "0.1.0"
description = "High-performance, JIT-native replay buffers with PER and N-step returns."
requires-python = ">=3.13"
dependencies = [
    "jax~=0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
