[project]
name = "jax-utils"
version = "0.1.0"
description = "Pytree math helpers and typed JAX wrappers."
requires-python = ">=3.13"
dependencies = [
    "jax~=0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
