[project]
name = "research-analysis"
version = "0.1.0"
description = "Statistical analysis tools for RL experiments."
requires-python = ">=3.13"
dependencies = [
    "numba~=0.61",
    "numpy~=2.0",
    "polars~=1.22",
    "scipy~=1.14",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
