[project]
name = "research-instrument"
version = "0.1.0"
description = "JAX-native metrics collection for RL research experiments"
requires-python = ">=3.13"
dependencies = [
    "jax~=0.9",
    "jaxlib~=0.9",
    "numpy>=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
