[project]
name = "research-store"
version = "0.1.0"
description = "Planned library: research-store"
requires-python = ">=3.13"
dependencies = []



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[tool.uv]
package = false


[project]
name = "research-store"
version = "0.1.0"
description = "Unified artifact and checkpoint storage with Research URI abstraction"
dependencies = [
    "orbax-checkpoint~=0.11",
    "jax~=0.9",
]


