[project]
name = "rl-agents"
version = "0.1.0"
description = "E2E JIT-able RL agents"
dependencies = [
    "jax~=0.9",
    "flax~=0.12",
    "rl-components", # Workspace dependency
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
rl-components = { workspace = true }

