[project]
name = "rl-agents"
version = "0.1.0"
description = "E2E JIT-able RL agents"
requires-python = ">=3.13"
dependencies = [
    "jax~=0.9",
    "flax~=0.12",
    "jax-nn",
    "rl-components",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
jax-nn = { workspace = true }
rl-components = { workspace = true }

