[project]
name = "rl-components"
version = "0.1.0"
description = "Shared RL components (buffers, networks, types)"
requires-python = ">=3.13"
dependencies = [
    "brax~=0.14",
    "chex~=0.1",
    "flax~=0.12",
    "jaxatari @ git+https://github.com/k4ntz/JAXAtari@v0.1",
    "jax~=0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
